Added ByBit API

--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import polars as pl"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
