ByBit interface working

--- a/examples/bybit-connect.ipynb
+++ b/examples/bybit-connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a53a42-d9d2-40c7-9f18-ba25b54cbb86",
    "metadata": {},
    "outputs": [],
@@ -18,24 +18,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import time\n",
-    "import polars as pl\n",
-    "import tqdm\n"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "28e479ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dspy.api import get_api\n",
-    "from dspy.api.bybit import Config\n",
-    "\n",
-    "config = Config()\n",
-    "s = get_api('bybit', config=config)\n"
+    "from dspy.api.bybit import Config"
    ]
   },
   {
@@ -48,27 +42,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "b1e0ac10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed parameters\n",
+    "API_KEY = \"StMMBpVlRHbiZF5tki\"\n",
+    "API_SECRET = \"DOe9UXJgeWLpTKWBibHBpjIDW0UpSON9FuUp\"\n",
+    "SYMBOL = 'BTCUSDT'\n",
+    "COIN = 'USDT'\n",
+    "\n",
+    "# Parameters to be optimized\n",
+    "EQUITY = 2.0\n",
+    "RANGE = 0.005\n",
+    "NUM_ORDERS = 5\n",
+    "POLLING_RATE = 1\n",
+    "TP_DIST = 0.0005\n",
+    "STOP_DIST = 0 #0.025\n",
+    "\n",
+    "config = Config(API_KEY, \n",
+    "                API_SECRET, \n",
+    "                SYMBOL, \n",
+    "                COIN, \n",
+    "                EQUITY, \n",
+    "                RANGE, \n",
+    "                NUM_ORDERS, \n",
+    "                POLLING_RATE, \n",
+    "                TP_DIST, \n",
+    "                STOP_DIST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a823580d-a388-426e-bb58-2a04a5f2b128",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config"
+    "api = get_api('bybit', config=config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "13c70e1d-5e19-498d-9bfe-2466b115c7d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = ByBitManager(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "9f9335dc-9403-4ffb-aea0-1c5728bebd2c",
    "metadata": {},
    "outputs": [],
@@ -81,32 +98,104 @@
    "id": "4f8ac384-b2a9-4903-8d90-0223840ec3c6",
    "metadata": {},
    "source": [
-    "### Prices and volumes"
+    "###  <a id='chapter1'> <font color=\"grey\">Prices and Volumes</font></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cc984e1e-638c-4cc7-b3e6-40fda8e306a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last price:  2220.98\n"
+     ]
+    }
+   ],
    "source": [
-    "mid = s.get_mid(symbols[1])\n",
-    "print(\"Last price: \", mid)"
+    "mid = api.get_mid(symbols[1])\n",
+    "print(f\"Last price: {mid}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1b8b2e8e-f628-47b4-b9f0-7d0d5033257c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bid:  [85871.8, 3.761]\n",
+      "Ask:  [85871.9, 6.073]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ask = api.get_ask(symbols[0])\n",
+    "bid = api.get_bid(symbols[0])\n",
+    "print(f\"Bid: {bid}\")\n",
+    "print(f\"Ask: {ask}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "79e8b215",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bids: [[8.58546e+04 8.70400e+00]\n",
+      " [8.58545e+04 3.49000e-01]\n",
+      " [8.58540e+04 7.20000e-02]\n",
+      " [8.58536e+04 4.90000e-02]\n",
+      " [8.58535e+04 4.30000e-02]]\n",
+      "Asks: [[8.58547e+04 4.80000e-02]\n",
+      " [8.58549e+04 1.00000e+01]\n",
+      " [8.58560e+04 2.00000e-03]\n",
+      " [8.58569e+04 2.00000e-03]\n",
+      " [8.58578e+04 2.00000e-03]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "orderbook = api.get_orderbook(symbols[0], depth=5)\n",
+    "print(f\"Bids: {orderbook['b']}\")\n",
+    "print(f\"Asks: {orderbook['a']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c42de4fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latency: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Latency: {api.get_latency(symbols[1])}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b8b2e8e-f628-47b4-b9f0-7d0d5033257c",
+   "id": "6a5e5446",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ask = s.get_ask(symbols[0])\n",
-    "bid = s.get_bid(symbols[0])\n",
-    "print(\"Bid: \", bid)\n",
-    "print(\"Ask: \", ask)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -118,24 +207,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "48f8c468-a273-4c46-8088-f9c3b02858fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance: 2.33e-05\n"
+     ]
+    }
+   ],
    "source": [
-    "balance = s.get_wallet_balance()\n",
-    "print(\"Balance: \", balance)"
+    "balance = api.get_wallet_balance()\n",
+    "print(f\"Balance: {balance}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f647bd49-7da7-4a56-856d-9e5a17b574de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taker fees: 0.00055\n",
+      "Maker fees: 0.0002\n"
+     ]
+    }
+   ],
    "source": [
-    "fees = s.get_fees('BTCUSDT')\n",
-    "print(\"Fees: \", fees)"
+    "fees = api.get_fees('BTCUSDT')\n",
+    "print(f\"Taker fees: {fees[0]}\")\n",
+    "print(f\"Maker fees: {fees[1]}\")"
    ]
   },
   {
@@ -149,23 +256,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70055c13-3922-4911-9e9b-bb412edba057",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.s.get_positions(category='linear', \n",
-    "            symbol=symbols[0],\n",
-    "            )['result']['list'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d982242d-da5d-4127-83ae-b93a87ab3984",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos = s.get_position(symbols[0])\n",
+    "pos = api.get_position(symbols[0])\n",
     "pos is None"
    ]
   },
