Further ByBit testing done.

--- a/examples/bybit-connect.ipynb
+++ b/examples/bybit-connect.ipynb
@@ -191,11 +191,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6a5e5446",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ts': '1740908585370', 'price': 85961.3, 'qty': 0.001, 'side': -1},\n",
+       " {'ts': '1740908585360', 'price': 85961.4, 'qty': 0.01, 'side': 1},\n",
+       " {'ts': '1740908584842', 'price': 85961.4, 'qty': 0.001, 'side': 1},\n",
+       " {'ts': '1740908584454', 'price': 85961.4, 'qty': 0.01, 'side': 1},\n",
+       " {'ts': '1740908583997', 'price': 85961.4, 'qty': 0.008, 'side': 1}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trades = api.get_trades(symbols[0], limit=5)\n",
+    "trades"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "48f8c468-a273-4c46-8088-f9c3b02858fc",
    "metadata": {},
    "outputs": [
@@ -215,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance: 2.33e-05\n"
+      "Balance: 962.76372892\n"
      ]
     }
    ],
@@ -255,13 +273,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "d982242d-da5d-4127-83ae-b93a87ab3984",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BTCUSDT': {'size': 0.005,\n",
+       "  'aep': 86019.3,\n",
+       "  'mark_price': 85883.2,\n",
+       "  'value': 430.0965,\n",
+       "  'leverage': 100.0,\n",
+       "  'position_balance': 0.0,\n",
+       "  'unrealized_pnl': -0.6805,\n",
+       "  'realized_pnl': -0.23655308},\n",
+       " 'ETHUSDT': {'size': 0,\n",
+       "  'aep': 0,\n",
+       "  'mark_price': 2244.52,\n",
+       "  'value': 0,\n",
+       "  'leverage': 100.0,\n",
+       "  'position_balance': 0,\n",
+       "  'unrealized_pnl': 0,\n",
+       "  'realized_pnl': 0.0}}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pos = api.get_position(symbols[0])\n",
-    "pos is None"
+    "pos = api.get_positions(symbols)\n",
+    "pos"
    ]
   },
   {
@@ -274,318 +318,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "77291941-b2bb-4fcf-a7b0-52ecffa8747b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'order_id': 'e571d640-49a1-4c32-94d4-e5dd481b701a',\n",
+       " 'ret_code': 0,\n",
+       " 'time': 1740908802469}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Place market order\n",
-    "res = s.place_order('BTCUSDT', 0.005)\n",
+    "res = api.place_order('BTCUSDT', 0.005)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "c3ecf939-cccc-4a8e-a647-2f5612438742",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance: 957.91587957\n"
+     ]
+    }
+   ],
    "source": [
-    "balance = s.get_wallet_balance()\n",
-    "print(\"Balance: \", balance)"
+    "balance = api.get_wallet_balance()\n",
+    "print(f\"Balance: {balance}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "1432df3e-2f04-4df4-8802-4ba55d4c52d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'size': 0.005,\n",
+       " 'aep': 86019.3,\n",
+       " 'mark_price': 85961.15,\n",
+       " 'value': 430.0965,\n",
+       " 'leverage': 100.0,\n",
+       " 'position_balance': 0.0,\n",
+       " 'unrealized_pnl': -0.29075,\n",
+       " 'realized_pnl': -0.23655308}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pos = s.get_position(symbols[0])\n",
+    "pos = api.get_position(symbols[0])\n",
     "pos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25805491-d7a4-4385-aca6-c8376b363426",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "entry = pos['entry_price']\n",
-    "entry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0777782d-07e0-4639-a62b-9e39f7c29979",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "entry*float(fees[0])*0.005"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c1fe4e6-20be-4ab6-a744-ea68b660dbbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "liq_price = s.get_bid('BTCUSDT')[0]\n",
-    "liq_price-entry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "c0ffeff9-a7b8-46f0-bab5-294aaa906b96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos = s.get_positions(symbols)['BTCUSDT']\n",
-    "diff = (pos['mark_price']-pos['entry_price'])*0.005\n",
-    "diff2 = pos['unrealized_pnl']"
+    "pos = api.get_positions([symbols[0]])\n",
+    "diff = (pos['mark_price']-pos['aep'])*0.005\n",
+    "diff2 = pos['unrealized_pnl']\n",
+    "assert abs(diff2-diff) < 1e-7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "560b38b5-5d47-45e8-822a-87f00576d365",
+   "execution_count": 55,
+   "id": "420cdedc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BTCUSDT': 0, 'ETHUSDT': None}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(diff-diff2)<1e-8"
+    "resp = api.close_positions(symbols)\n",
+    "resp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9156211d-fc7c-475c-bd35-2563a6eedf4f",
+   "execution_count": 56,
+   "id": "98ec3892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BTCUSDT': {'size': 0,\n",
+       "  'aep': 0,\n",
+       "  'mark_price': 85821.3,\n",
+       "  'value': 0,\n",
+       "  'leverage': 100.0,\n",
+       "  'position_balance': 0,\n",
+       "  'unrealized_pnl': 0,\n",
+       "  'realized_pnl': 0.0},\n",
+       " 'ETHUSDT': {'size': 0,\n",
+       "  'aep': 0,\n",
+       "  'mark_price': 2243.99,\n",
+       "  'value': 0,\n",
+       "  'leverage': 100.0,\n",
+       "  'position_balance': 0,\n",
+       "  'unrealized_pnl': 0,\n",
+       "  'realized_pnl': 0.0}}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(pos['realized_pnl']+fees[0]*pos['entry_price']*0.005)<1e-8"
+    "api.get_positions(symbols)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "710e5739-2cc2-4ba1-92d6-be0f9a7016fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Close position\n",
-    "response = s.close_positions(['BTCUSDT'])\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c36bb2f-0ef1-4545-82bf-1e51eacf058e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Limit orders\n",
-    "price = s.get_mid(config.symbol)\n",
-    "response = s.place_order(config.symbol,\n",
-    "                         -0.002,\n",
-    "                         price+10,\n",
-    "                         type='Limit')\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfb6d503-c06b-47d8-8b06-b85b85388442",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price = s.get_mid(symbols[0])\n",
-    "response = s.place_order(symbols[0],\n",
-    "                         -0.001,\n",
-    "                         price+100,\n",
-    "                         type='Limit')\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41918074-6b89-4a30-934b-15803ae6720b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = s.replace_order(symbols[0], response['order_id'], -0.001, price+100)\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fb3817a-484f-42b2-897b-386d83515020",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp = s.cancel_order(symbols[0], response['order_id'])\n",
-    "print(resp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1447faaf-7fe2-4481-aa90-83a8c841d350",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Batch orders\n",
-    "response = s.place_batch_order(symbols[0], [-0.001, -0.001], [price+50, price+100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a66b8ee8-71a8-48a9-aa94-f54c4ca77691",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.cancel_batch_order(symbols[0], [x['order_id'] for x in response])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f45e7293-0736-4516-bdcf-ca9fcdd76c80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.cancel_all_orders([symbols[0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02a04315-c135-42cf-81c5-0f4bea8128aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.close_positions(['BTCUSDT'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d43650f-52f6-4cb0-9792-114b3684985b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm(s, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61fa54cf-57cf-431c-b550-f700b215a6de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.cancel_all_orders(config.symbol)\n",
-    "last = s.get_mid(config.symbol)\n",
-    "price_range = round(config.range * last, 2)\n",
-    "balance = s.get_wallet_balance()\n",
-    "available_equity = (balance * config.equity) / last\n",
-    "# Arithmetic grid\n",
-    "nn = 2*available_equity / (config.num_orders * (config.num_orders + 1))\n",
-    "long_qtys = np.round([nn * i for i in reversed(range(1, config.num_orders + 1))], \n",
-    "                             decimals=3)\n",
-    "short_qtys = np.round([-i for i in long_qtys][::-1], decimals=3)\n",
-    "long_prices = np.round(\n",
-    "            np.linspace(last - price_range/2, \n",
-    "                        last - nn, \n",
-    "                        config.num_orders), \n",
-    "            decimals=1\n",
-    "            )\n",
-    "short_prices = np.round(\n",
-    "            np.linspace(last + nn, \n",
-    "                        last + price_range/2, \n",
-    "                        config.num_orders), \n",
-    "            decimals=1\n",
-    "            )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91153803-19e9-479f-8b64-8f26a4ead770",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "long_order_ids = s.place_batch_order(config.symbol, long_qtys, long_prices)\n",
-    "short_order_ids = s.place_batch_order(config.symbol, short_qtys, short_prices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4b56096-bb3e-4059-bc80-ddcd1cd86ddf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.cancel_all_orders(config.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f92cdb4-597b-4a3f-bf49-a55b8b0d1a76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm(s, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3909583-202a-4f49-b549-bc7ecd58fe85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = s.get_position(config.symbol)\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa580663-de66-4480-a04e-30ec4df98f16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int(p['mark_price']*(1+0.005))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "242dddc1-543e-4c48-bf5c-7f563fb5e951",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linspace(0,1,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eae4e9a-2a0c-4694-a790-53075e768218",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
