Added functionality for loading data at different frequencies

--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -164,6 +164,193 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 14)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc__s0_BTCUSDT</th><th>prc__s1_BTCUSDT</th><th>vol__s0_BTCUSDT</th><th>vol__s1_BTCUSDT</th><th>prc__s0_ETHUSDT</th><th>prc__s1_ETHUSDT</th><th>vol__s0_ETHUSDT</th><th>vol__s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th><th>vwap_BTCUSDT</th><th>vwap_ETHUSDT</th></tr><tr><td>u64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1721433660056500000</td><td>66689.9</td><td>66690.0</td><td>7.331</td><td>10.59</td><td>3503.63</td><td>3503.64</td><td>12.785</td><td>82.869</td><td>2024-07-20 00:01:00.056500</td><td>66689.95</td><td>3503.635</td><td>66689.959093</td><td>3503.638663</td></tr><tr><td>1721433660058500000</td><td>66689.9</td><td>66690.0</td><td>7.331</td><td>10.531</td><td>3503.63</td><td>3503.64</td><td>12.785</td><td>82.869</td><td>2024-07-20 00:01:00.058500</td><td>66689.95</td><td>3503.635</td><td>66689.958958</td><td>3503.638663</td></tr><tr><td>1721433660063500000</td><td>66689.9</td><td>66690.0</td><td>7.329</td><td>10.531</td><td>3503.63</td><td>3503.64</td><td>0.332</td><td>82.869</td><td>2024-07-20 00:01:00.063500</td><td>66689.95</td><td>3503.635</td><td>66689.958964</td><td>3503.63996</td></tr><tr><td>1721433660066500000</td><td>66689.9</td><td>66690.0</td><td>6.079</td><td>10.531</td><td>3503.63</td><td>3503.64</td><td>0.332</td><td>82.883</td><td>2024-07-20 00:01:00.066500</td><td>66689.95</td><td>3503.635</td><td>66689.963402</td><td>3503.63996</td></tr><tr><td>1721433660069500000</td><td>66689.9</td><td>66690.0</td><td>6.079</td><td>10.513</td><td>3503.63</td><td>3503.64</td><td>0.332</td><td>82.883</td><td>2024-07-20 00:01:00.069500</td><td>66689.95</td><td>3503.635</td><td>66689.963362</td><td>3503.63996</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 14)\n",
+       "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
+       "│ ts        ┆ prc__s0_B ┆ prc__s1_B ┆ vol__s0_B ┆ … ┆ mid_BTCUS ┆ mid_ETHUS ┆ vwap_BTCU ┆ vwap_ETH │\n",
+       "│ ---       ┆ TCUSDT    ┆ TCUSDT    ┆ TCUSDT    ┆   ┆ DT        ┆ DT        ┆ SDT       ┆ USDT     │\n",
+       "│ u64       ┆ ---       ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---      │\n",
+       "│           ┆ f64       ┆ f64       ┆ f64       ┆   ┆ f64       ┆ f64       ┆ f64       ┆ f64      │\n",
+       "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
+       "│ 172143366 ┆ 66689.9   ┆ 66690.0   ┆ 7.331     ┆ … ┆ 66689.95  ┆ 3503.635  ┆ 66689.959 ┆ 3503.638 │\n",
+       "│ 005650000 ┆           ┆           ┆           ┆   ┆           ┆           ┆ 093       ┆ 663      │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 172143366 ┆ 66689.9   ┆ 66690.0   ┆ 7.331     ┆ … ┆ 66689.95  ┆ 3503.635  ┆ 66689.958 ┆ 3503.638 │\n",
+       "│ 005850000 ┆           ┆           ┆           ┆   ┆           ┆           ┆ 958       ┆ 663      │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 172143366 ┆ 66689.9   ┆ 66690.0   ┆ 7.329     ┆ … ┆ 66689.95  ┆ 3503.635  ┆ 66689.958 ┆ 3503.639 │\n",
+       "│ 006350000 ┆           ┆           ┆           ┆   ┆           ┆           ┆ 964       ┆ 96       │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 172143366 ┆ 66689.9   ┆ 66690.0   ┆ 6.079     ┆ … ┆ 66689.95  ┆ 3503.635  ┆ 66689.963 ┆ 3503.639 │\n",
+       "│ 006650000 ┆           ┆           ┆           ┆   ┆           ┆           ┆ 402       ┆ 96       │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 172143366 ┆ 66689.9   ┆ 66690.0   ┆ 6.079     ┆ … ┆ 66689.95  ┆ 3503.635  ┆ 66689.963 ┆ 3503.639 │\n",
+       "│ 006950000 ┆           ┆           ┆           ┆   ┆           ┆           ┆ 362       ┆ 96       │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df._feat.add_vwap(cols=[\"prc__s0\", \"prc__s1\", \"vol__s0\", \"vol__s1\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 7, 20, 0, 1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "t = datetime.strptime(TIMES[0], \"%y%m%d.%H%M%S\")\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "td = timedelta(minutes=1)\n",
+    "td.total_seconds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dspy.utils import round_up_to_nearest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 7, 20, 0, 1, 0, 56500)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['dts'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 7, 20, 0, 2)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round_up_to_nearest(df['dts'][0], td)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th></tr><tr><td>datetime[ns]</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>2024-07-20 00:01:01</td><td>66689.95</td><td>3503.635</td></tr><tr><td>2024-07-20 00:01:02</td><td>66689.95</td><td>3503.905</td></tr><tr><td>2024-07-20 00:01:03</td><td>66689.95</td><td>3503.905</td></tr><tr><td>2024-07-20 00:01:04</td><td>66698.95</td><td>3503.905</td></tr><tr><td>2024-07-20 00:01:05</td><td>66698.95</td><td>3503.905</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 3)\n",
+       "┌─────────────────────┬─────────────┬─────────────┐\n",
+       "│ ts                  ┆ mid_BTCUSDT ┆ mid_ETHUSDT │\n",
+       "│ ---                 ┆ ---         ┆ ---         │\n",
+       "│ datetime[ns]        ┆ f64         ┆ f64         │\n",
+       "╞═════════════════════╪═════════════╪═════════════╡\n",
+       "│ 2024-07-20 00:01:01 ┆ 66689.95    ┆ 3503.635    │\n",
+       "│ 2024-07-20 00:01:02 ┆ 66689.95    ┆ 3503.905    │\n",
+       "│ 2024-07-20 00:01:03 ┆ 66689.95    ┆ 3503.905    │\n",
+       "│ 2024-07-20 00:01:04 ┆ 66698.95    ┆ 3503.905    │\n",
+       "│ 2024-07-20 00:01:05 ┆ 66698.95    ┆ 3503.905    │\n",
+       "└─────────────────────┴─────────────┴─────────────┘"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdf = dl.load(RCS[0:2], TIMES)\n",
+    "rdf.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
